--- a/Develop/package.json
+++ b/Develop/package.json
@@ -1,7 +1,7 @@
 {
   "name": "module-13-challenge-orm",
   "version": "1.0.0",
-  "description": "",
+  "description": "A mysql database and application backend for an e-commerce site. Built using MySQL2, Express, Sequelize and dotenv.",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@work.github.com:coding-boot-camp/module-13-challenge-orm.git"
+    "url": "https://github.com/JAC61090/reimagined-ORM-Back.git"
   },
   "keywords": [],
   "author": "",
